tests/ui/cached_name_reserved_prefix.stderr
error: cache names beginning with `__cached` are reserved for macro-generated bindings and cannot be used as a `name` value
 --> tests/ui/cached_name_reserved_prefix.rs:6:4
  |
6 | fn f(x: i32) -> i32 {
  |    ^
